modified:   experiments/exp_004_rl/config.json 	modified:   experiments/exp_004_rl/dqn_policy.pt 	modified:   experiments/exp_004_rl/reward_curve.npy   modified:   gnn/embed.py 	new file:   requirements.txt 	modified:   rl/agent.py 	modified:   rl/env.py 	new file:   rl/replay_buffer.py 	modified:   rl/train.py

--- a/experiments/exp_004_rl/config.json
+++ b/experiments/exp_004_rl/config.json
@@ -2,5 +2,5 @@
     "episodes": 50,
     "steps_per_episode": 50,
     "gamma": 0.99,
-    "epsilon_final": 0.1
+    "epsilon_final": 0.049911691230058335
 }
