modified:   experiments/exp_004_rl/config.json 	modified:   experiments/exp_004_rl/dqn_policy.pt 	modified:   experiments/exp_004_rl/reward_curve.npy 	modified:   rl/agent.py 	modified:   rl/env.py 	modified:   rl/train.py

--- a/experiments/exp_004_rl/config.json
+++ b/experiments/exp_004_rl/config.json
@@ -1,6 +1,6 @@
 {
-    "episodes": 50,
+    "episodes": 500,
     "steps_per_episode": 50,
     "gamma": 0.99,
-    "epsilon_final": 0.049911691230058335
+    "epsilon_final": 0.05
 }
